# Game-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  premake5.lua  run.sh
Hazel/: Hazel.h  Hazel.vcxproj  Hazel.vcxproj.filters  Makefile
Hazel/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  Hazel.cpp  Hazel.h  Log.cpp  Log.h
Hazel/src/Events/: Event.h
Sandbox/: Makefile  Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
